--- a/app/assets/stylesheets/scaffolds.scss.erb
+++ b/app/assets/stylesheets/scaffolds.scss.erb
@@ -1,5 +1,7 @@
+
 body {
-  background-color: #fff;
+//  background-color: <%= Rails.env.development? ? '#FFFFFF' : '#F0FFFF'%>; /*Teste sobe uma cor e desenvonvimento sobe outra
+//  background-image: asset_url('rails.png');
   color: #333;
   margin: 33px;
   font-family: verdana, arial, helvetica, sans-serif;
