--- a/app/assets/javascripts/application.js.erb
+++ b/app/assets/javascripts/application.js.erb
@@ -13,4 +13,13 @@
 //= require rails-ujs
 //= require activestorage
 //= require turbolinks
-//= require_tree .
+//= require jquery
+//= require notify-js-legacy/notify
+
+
+<%# msg = Time.now.hour < 12 ? "Bom dia!" : "Olá!!!" %>
+//alert("
+<%#= msg %>
+//");
+// bom dia ou ola - dando um alerta
+
