--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,3 +1,27 @@
+<div class="jumbotron">
+  <h1 class="display-4"><%= t('welcome') %></h1>
+  <p class="lead"><%= t('messages.welcome')%></p>
+  <hr class="my-4">
+  <p><%= t('messages.menu')%></p>
+  <%= render "menu" %>
+</div>
+<!--# adicionando relacionamento entre tabelas-->
+<!--rails g migration AddMiningTypeToTabelas->-->
+<!--mining_tabela:references-->
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 <!--<h1>Seja bem vindo</h1>-->
 <%#= data_br(Date.today)%>
 <!--<p><strong>A data de hoje é: </strong> <%#= data_br(Date.today)%> </p>-->
@@ -21,30 +45,3 @@
 <!--   <br>-->
 <!--    <img src="https://img.ibxk.com.br/2018/08/29/29194642940337.jpg?w=1120&h=420&mode=crop&scale=both" width="500px" height="400px" />-->
 <!--</ul>-->
-
-<div class="jumbotron">
-  <p>idioma:<%= locale(I18n.locale)%> </p><!---Tradução----> <!---Na viw pode ser t("chave")-->
-
- <strong><%=I18n.l(Date.today)%></strong> <!---Transformando data local---->
-  <p>
-    <%= link_to 'Idiomas portugues', '/?locale=pt-BR'%>
-  </p>
-  <p>
-    <%= link_to 'English', '/?locale=en'%>
-  </p>
-  <p><%= I18n.t("abc") %></p>
-  <br><br>
-  <h1 class="display-4"><%= t('Bem vindos') %></h1><br>
-  <h2 class="lead"><%= t('messages.cripto moedas')%></h2>
-  <hr class="my-4">
-  <p><%= t('messages.menu')%></p>
-  <h3><%= render "menu" %></h3>
-  <br>
-  <hr class="my-4">
-</div>
-
-<!--# adicionando relacionamento entre tabelas-->
-
-
-<!--rails g migration AddMiningTypeToTabelas->-->
-<!--mining_tabela:references-->
