--- a/app/assets/javascripts/application.js.erb
+++ b/app/assets/javascripts/application.js.erb
@@ -15,6 +15,12 @@
 //= require turbolinks
 //= require jquery
 //= require notify-js-legacy/notify
+//= require bootstrap/dist/js/bootstrap
+//= require popper.js/dist/popper
+
+
+
+
 
 
 <%# msg = Time.now.hour < 12 ? "Bom dia!" : "Olá!!!" %>
