--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,22 +1,54 @@
+
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>Projeto</title>
-    <%= csrf_meta_tags %>
-    <%= csp_meta_tag %>
+<head>
+  <title>CrypoWallet</title>
+  <%= csrf_meta_tags %>
+  <%= csp_meta_tag %>
 
-    <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
-    <%= stylesheet_link_tag 'scaffolds', media: 'all', 'data-turbolinks-track': 'reload' %>
-    <%= stylesheet_link_tag    params[:controller], media: 'all', 'data-turbolinks-track': 'reload' %> <!--parametros do css--->
-    <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
-    <%= javascript_include_tag params[:controller], 'data-turbolinks-track': 'reload' %><!--parametros do js--->
-    <!--para nao carregar em todas as paginas css e js--->
-  </head>
+  <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
+  <%= stylesheet_link_tag    params[:controller], media: 'all', 'data-turbolinks-track': 'reload' %>
 
-  <body>
-  <h1> TESTE LAYOUT EM TODAS AS PAGINAS -  <%= params[:controller] %></h1>
-  <script>  $.notify("Access granted", "success");</script>
-<!--  Notificação-->
-    <%= yield %>
-  </body>
+  <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+  <%= javascript_include_tag params[:controller], 'data-turbolinks-track': 'reload' %>
+</head>
+
+<body>
+<div class="container-fluid">
+  <ul class="nav justify-content-end">
+    <li>
+      <%= link_to 'Home', root_path, class:"nav-link" %>
+    </li>
+    <li class="nav-item">
+      <%= link_to 'Português', root_path(locale: 'pt-BR'), class:"nav-link" %>
+    </li>
+    <li class="nav-item">
+      <%= link_to 'English', root_path(locale: 'en'), class:"nav-link" %>
+    </li>
+  </ul>
+  <%= yield %>
+</div>
+</body>
 </html>
+
+
+<!--<!DOCTYPE html>-->
+<!--<html>-->
+<!--  <head>-->
+<!--    <title>Projeto</title>-->
+    <%#= csrf_meta_tags %>
+    <%#= csp_meta_tag %>
+    <%#= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
+<!--    <%#= stylesheet_link_tag    params[:controller], media: 'all', 'data-turbolinks-track': 'reload' %> parametros do css--->
+<!--    <%#= javascript_include_tag params[:controller], 'data-turbolinks-track': 'reload' %>--parametros do js--->
+  <!--para nao carregar em todas as paginas css e js--->
+<!--  </head>-->
+<!--  <body >-->
+<!--  <div>-->
+<!--    <h1> Cripto Valle - <%#= params[:controller] %></h1>-->
+    <%#= yield %>
+<!--  </div>-->
+<!--<script> $.notify("Access granted", "success");</script> //Notificação--->
+<!--  </body>-->
+<!--</html>-->
+
