--- a/app/views/mining_types/index.html.erb
+++ b/app/views/mining_types/index.html.erb
@@ -1,12 +1,12 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Mining Types</h1>
+<h1><%= MiningType.model_name.human(count: @mining_types.count)%></h1>
 
-<table>
+<table class = "table table-hover table-active">
   <thead>
     <tr>
-      <th>Name</th>
-      <th>Acronym</th>
+      <th>Nome</th>
+      <th>Sigla</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -26,4 +26,4 @@
 
 <br>
 
-<%= link_to 'New Mining Type', new_mining_type_path %>
+<%= link_to t('new.mining_type'), new_mining_type_path, class:"btn btn-primary" %>
