--- a/app/views/welcome/_menu.html.erb
+++ b/app/views/welcome/_menu.html.erb
@@ -1,4 +1,2 @@
-
-<h2><%= link_to 'Moeda', moedas_path %></h2>
-<br><br>
-<h2><%= link_to "#{MiningType.model_name.human}", mining_types_path, class:"btn btn-primary btn-lg", role:"button"%></h2>
+<%= link_to "Moeda", moedas_path, class:"btn btn-primary btn-lg", role:"button" %>
+<%= link_to "#{MiningType.model_name.human}", mining_types_path, class:"btn btn-primary btn-lg", role:"button" %>
