--- a/app/views/moedas/_form.html.erb
+++ b/app/views/moedas/_form.html.erb
@@ -10,29 +10,30 @@
       </ul>
     </div>
   <% end %>
-  <%= data_br(Date.today)%> <br><br><%= nome_aplicacao %><br><br>
-  <div class="field">
+<!--  <%#= data_br(Date.today)%> <br><br><%#= nome_aplicacao %><br><br>-->
+  <div class="form-group">
     <%= form.label :description %>
-    <%= form.text_field :description %>
+    <%= form.text_field :description, class:"form-control", placeholder:"Bitcoin" %>
   </div>
 
-  <div class="field">
+  <div class="form-group">
     <%= form.label :acronym %>
-    <%= form.text_field :acronym %>
+    <%= form.text_field :acronym, class:"form-control", placeholder:"BTC" %>
   </div>
 
-  <div class="field">
+  <div class="form-group">
     <%= form.label :url_image %>
-    <%= form.text_field :url_image %>
+    <%= form.text_field :url_image, class:"form-control", placeholder:"http://img.ur/bitcoin.png" %>
   </div>
 
-  <div class="field">
+  <div class="form-group">
     <%= form.label :mining_type_id %>
-    <%= form.select("mining_type_id", @mining_type_options, {include_blank: 'Selecione...'}) %>
+    <%= form.select("mining_type_id", @mining_type_options, { include_blank: 'Selecione...' }, class:"form-control") %>
   </div>
-  <br>
 
   <div class="actions">
-    <%= form.submit %>
+    <%= form.submit nil, class:"btn btn-primary"  %>
   </div>
 <% end %>
+
+</br>
