--- a/app/views/moedas/index.html.erb
+++ b/app/views/moedas/index.html.erb
@@ -3,9 +3,12 @@
 <table class="table table-hover table-dark">
   <thead>
   <tr>
-    <th><%= @moedas.human_attribute_name(:description) %></th>
-    <th><%= @moedas.human_attribute_name(:acronym) %></th>
-    <th><%= @moedas.human_attribute_name(:url_image) %></th>
+<!--    <th><%#= @moedas.human_attribute_name(:description) %></th>-->
+<!--    <th><%#= @moedas.human_attribute_name(:acronym) %></th>-->
+<!--    <th><%#= @moedas.human_attribute_name(:url_image) %></th>-->
+    <th>descrição</th>
+    <th>Sigla</th>
+    <th>Imagem</th>
     <th colspan="3"></th>
   </tr>
   </thead>
